applied style to person component

--- a/src/Person/Person.css
+++ b/src/Person/Person.css
@@ -1,8 +1,8 @@
-.Person{
+/* .Person{
     width: 60%;
     margin: 16px auto;
-    border: 1px solid 3px #ccc;
+    border: 1px solid 3px rgb(130, 11, 160);
     padding: 16px;
     text-align: center;
 }
-
+ */
